sandbox/mpi/fp_mpi.pas

function MPI_Rget_accumulate(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; result_addr:pointer; result_count:longint; 
           result_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; target_count:longint; target_datatype:TMPI_Datatype; 
           op:TMPI_Op; win:TMPI_Win; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Rput(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           target_cout:longint; target_datatype:TMPI_Datatype; win:TMPI_Win; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Rsend(ibuf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Rsend_init(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Scan(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Iscan(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Scatter(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; root:longint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Iscatter(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; root:longint; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Scatterv(sendbuf:pointer; sendcounts:Plongint; displs:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcount:longint; recvtype:TMPI_Datatype; root:longint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Iscatterv(sendbuf:pointer; sendcounts:Plongint; displs:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcount:longint; recvtype:TMPI_Datatype; root:longint; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Send_init(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Send(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Sendrecv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; dest:longint; sendtag:longint; 
           recvbuf:pointer; recvcount:longint; recvtype:TMPI_Datatype; source:longint; recvtag:longint; 
           comm:TMPI_Comm; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Sendrecv_replace(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; sendtag:longint; 
           source:longint; recvtag:longint; comm:TMPI_Comm; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Ssend_init(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Ssend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Start(request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Startall(count:longint; array_of_requests:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Status_c2f(c_status:PMPI_Status; f_status:PMPI_Fint):longint;cdecl;external libhdf5;
function MPI_Status_f2c(f_status:PMPI_Fint; c_status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Status_set_cancelled(status:PMPI_Status; flag:longint):longint;cdecl;external libhdf5;
function MPI_Status_set_elements(status:PMPI_Status; datatype:TMPI_Datatype; count:longint):longint;cdecl;external libhdf5;
function MPI_Status_set_elements_x(status:PMPI_Status; datatype:TMPI_Datatype; count:TMPI_Count):longint;cdecl;external libhdf5;
function MPI_Testall(count:longint; array_of_requests:PMPI_Request; flag:Plongint; array_of_statuses:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Testany(count:longint; array_of_requests:PMPI_Request; index:Plongint; flag:Plongint; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Test(request:PMPI_Request; flag:Plongint; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Test_cancelled(status:PMPI_Status; flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Testsome(incount:longint; array_of_requests:PMPI_Request; outcount:Plongint; array_of_indices:Plongint; array_of_statuses:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Topo_test(comm:TMPI_Comm; status:Plongint):longint;cdecl;external libhdf5;
function MPI_Type_c2f(datatype:TMPI_Datatype):TMPI_Fint;cdecl;external libhdf5;
function MPI_Type_commit(_type:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_contiguous(count:longint; oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_darray(size:longint; rank:longint; ndims:longint; gsize_array:Plongint; distrib_array:Plongint; 
           darg_array:Plongint; psize_array:Plongint; order:longint; oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_f90_complex(p:longint; r:longint; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_f90_integer(r:longint; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_f90_real(p:longint; r:longint; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_hindexed_block(count:longint; blocklength:longint; array_of_displacements:PMPI_Aint; oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_hindexed(count:longint; array_of_blocklengths:Plongint; array_of_displacements:PMPI_Aint; oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_hvector(count:longint; blocklength:longint; stride:TMPI_Aint; oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_keyval(type_copy_attr_fn:PMPI_Type_copy_attr_function; type_delete_attr_fn:PMPI_Type_delete_attr_function; type_keyval:Plongint; extra_state:pointer):longint;cdecl;external libhdf5;
function MPI_Type_create_indexed_block(count:longint; blocklength:longint; array_of_displacements:Plongint; oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_struct(count:longint; array_of_block_lengths:Plongint; array_of_displacements:PMPI_Aint; array_of_types:PMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_subarray(ndims:longint; size_array:Plongint; subsize_array:Plongint; start_array:Plongint; order:longint; 
           oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_create_resized(oldtype:TMPI_Datatype; lb:TMPI_Aint; extent:TMPI_Aint; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_delete_attr(_type:TMPI_Datatype; type_keyval:longint):longint;cdecl;external libhdf5;
function MPI_Type_dup(_type:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_free(_type:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_free_keyval(type_keyval:Plongint):longint;cdecl;external libhdf5;
function MPI_Type_f2c(datatype:TMPI_Fint):TMPI_Datatype;cdecl;external libhdf5;
function MPI_Type_get_attr(_type:TMPI_Datatype; type_keyval:longint; attribute_val:pointer; flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Type_get_contents(mtype:TMPI_Datatype; max_integers:longint; max_addresses:longint; max_datatypes:longint; array_of_integers:Plongint; 
           array_of_addresses:PMPI_Aint; array_of_datatypes:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_get_envelope(_type:TMPI_Datatype; num_integers:Plongint; num_addresses:Plongint; num_datatypes:Plongint; combiner:Plongint):longint;cdecl;external libhdf5;
function MPI_Type_get_extent(_type:TMPI_Datatype; lb:PMPI_Aint; extent:PMPI_Aint):longint;cdecl;external libhdf5;
function MPI_Type_get_extent_x(_type:TMPI_Datatype; lb:PMPI_Count; extent:PMPI_Count):longint;cdecl;external libhdf5;
function MPI_Type_get_name(_type:TMPI_Datatype; type_name:Pchar; resultlen:Plongint):longint;cdecl;external libhdf5;
function MPI_Type_get_true_extent(datatype:TMPI_Datatype; true_lb:PMPI_Aint; true_extent:PMPI_Aint):longint;cdecl;external libhdf5;
function MPI_Type_get_true_extent_x(datatype:TMPI_Datatype; true_lb:PMPI_Count; true_extent:PMPI_Count):longint;cdecl;external libhdf5;
function MPI_Type_indexed(count:longint; array_of_blocklengths:Plongint; array_of_displacements:Plongint; oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_match_size(typeclass:longint; size:longint; _type:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Type_set_attr(_type:TMPI_Datatype; type_keyval:longint; attr_val:pointer):longint;cdecl;external libhdf5;
function MPI_Type_set_name(_type:TMPI_Datatype; type_name:Pchar):longint;cdecl;external libhdf5;
function MPI_Type_size(_type:TMPI_Datatype; size:Plongint):longint;cdecl;external libhdf5;
function MPI_Type_size_x(_type:TMPI_Datatype; size:PMPI_Count):longint;cdecl;external libhdf5;
function MPI_Type_vector(count:longint; blocklength:longint; stride:longint; oldtype:TMPI_Datatype; newtype:PMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Unpack(inbuf:pointer; insize:longint; position:Plongint; outbuf:pointer; outcount:longint; 
           datatype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Unpublish_name(service_name:Pchar; info:TMPI_Info; port_name:Pchar):longint;cdecl;external libhdf5;
function MPI_Unpack_external(datarep:Pchar; inbuf:pointer; insize:TMPI_Aint; position:PMPI_Aint; outbuf:pointer; 
           outcount:longint; datatype:TMPI_Datatype):longint;cdecl;external libhdf5;
function MPI_Waitall(count:longint; array_of_requests:PMPI_Request; array_of_statuses:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Waitany(count:longint; array_of_requests:PMPI_Request; index:Plongint; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Wait(request:PMPI_Request; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Waitsome(incount:longint; array_of_requests:PMPI_Request; outcount:Plongint; array_of_indices:Plongint; array_of_statuses:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Win_allocate(size:TMPI_Aint; disp_unit:longint; info:TMPI_Info; comm:TMPI_Comm; baseptr:pointer; 
           win:PMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_allocate_shared(size:TMPI_Aint; disp_unit:longint; info:TMPI_Info; comm:TMPI_Comm; baseptr:pointer; 
           win:PMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_attach(win:TMPI_Win; base:pointer; size:TMPI_Aint):longint;cdecl;external libhdf5;
function MPI_Win_c2f(win:TMPI_Win):TMPI_Fint;cdecl;external libhdf5;
function MPI_Win_call_errhandler(win:TMPI_Win; errorcode:longint):longint;cdecl;external libhdf5;
function MPI_Win_complete(win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_create(base:pointer; size:TMPI_Aint; disp_unit:longint; info:TMPI_Info; comm:TMPI_Comm; 
           win:PMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_create_dynamic(info:TMPI_Info; comm:TMPI_Comm; win:PMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_create_errhandler(_function:PMPI_Win_errhandler_function; errhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
